[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/JumpingFireball.gd" type="Script" id=1]
[ext_resource path="res://Enemies/gfxFireball/fireball.png" type="Texture" id=2]
[ext_resource path="res://Enemies/EnemyVisibilityNotifier.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="JumpingFireball" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )
disabled = true

[node name="FireballSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="enemie_hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 10

[node name="hitbox_collision" type="CollisionShape2D" parent="enemie_hitbox"]
scale = Vector2( 0.7, 0.8 )
shape = SubResource( 2 )

[node name="EnemyVisibilityNotifier" parent="." instance=ExtResource( 3 )]

[node name="IdleTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
[connection signal="body_entered" from="enemie_hitbox" to="." method="_on_enemie_hitbox_body_entered"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
